Dark Mode Flickering Fix

--- a/bootstrap-css/dark-home.css
+++ b/bootstrap-css/dark-home.css
@@ -671,7 +671,7 @@ body {
 .write-post-container {
 	background: #10151B94;
 	border-radius: 12px 12px 0px 0px;
-	height: 100%;
+	height: 99%;
 	padding: 8px;
 }
 
