--- a/bootstrap-css/light-home.css
+++ b/bootstrap-css/light-home.css
@@ -661,7 +661,7 @@ body {
 .write-post-container {
   background: #dedede94;
   border-radius: 12px 12px 0px 0px;
-  height: 100%;
+  height: 99%;
   padding: 8px;
 }
 
